# azure-integrations-cli

./: README.md  cli.py  main.py  pyproject.toml  setup.py
azints/: cli.py
src/azints/: main.py
